--- a/views/layout.njk
+++ b/views/layout.njk
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
   </head>
   <body>
-    {% block content %}{% endblock %} 👈🔎
+    {% block content %}
+
+    {% endblock %}
   </body>
 </html>
