--- a/views/platforms.njk
+++ b/views/platforms.njk
@@ -5,7 +5,7 @@
 
     <p>
         {% for platform in platforms %}
-        <li><a href = "/platforms/game">{{ platform.name }}</a></li>
+        <li><a href=/platform/{{games.id}}>{{ platform.name }}</a></li>
         {% else %}
        <li>This would display if the 'item' collection were empty</li>
         {% endfor %}
