--- a/views/layout.njk
+++ b/views/layout.njk
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/styles/style.css" />
+    <title>Video Games</title>
+
   </head>
   <body>
     {% block content %}
@@ -9,3 +12,4 @@
     {% endblock %}
   </body>
 </html>
+
