--- a/views/home.njk
+++ b/views/home.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div>
-<p> page de présentation </p>
-<a href = "/platform"> Test </a>
+<p> Bienvenue sur Video Games </p>
+<a href = "/platform"> Les différentes consoles </a>
   </div>
 {% endblock %}
