--- a/views/platforms.njk
+++ b/views/platforms.njk
@@ -5,11 +5,21 @@
 
 
         {% for item in plateform %}
-        <li><a href="/Platform/{{item.name}}/{{item.id}}">{{ item.name }}</a></li>
+        <li> <a href="/Platform/{{item.name}}/{{item.id}}">{{ item.name }}
+        <img src href="{{item.logo}}"</a></li>
 
         {% endfor %}
 
-
-
   </div>
+
+</br>
+</br>
+</br>
+</br>
+</br>
+<input type=button href="/"; value="Page d'acceuil" />
+<input type=button href="/platform"; value="Platforms" />
+<input type=button href="#"; value="Page Suivante" />
+
+
 {% endblock %}
