Route dynamiquee OK

--- a/views/gameInformation.njk
+++ b/views/gameInformation.njk
@@ -30,6 +30,30 @@
 {% endfor %}
 
 </p>
+
+
+
+</br>
+</br>
+</br>
+</br>
+</br>
+<button>
+    <a href ="/">
+    Page d'acceuil
+    </a>
+</button>
+<button>
+    <a href ="/platform">
+    Plateforms
+    </a>
+</button>
+
+<button>
+    <a href ="http://videogame-api.fly.dev/platforms?page=2">
+    Page Suivante
+    </a>
+</button>
 {% endblock %}
 
 
