--- a/views/home.njk
+++ b/views/home.njk
@@ -3,6 +3,14 @@
 {% block content %}
   <div>
 <p> Bienvenue sur Video Games </p>
+</br>
+</br>
+
+<img src="images/photoPresentation.jpeg" href="images/photoPresentation.jpeg"/>
+
+</br>
+</br>
+</br>
 <a href = "/platform"> Les différentes consoles </a>
   </div>
 {% endblock %}
